// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MarcoLegal · P2-5 objetivos institucionales > vista ciudadana — snapshot 1`] = `
<div>
  <p
    aria-live="polite"
    class="text-[11px] leading-snug text-[#5A6347] mb-3"
  >
    Ámbito modelado: San Pedro Garza García (único municipio en programa).
  </p>
  <div
    class="mb-4 space-y-4"
  >
    <p
      class="font-sans text-[11px] font-medium uppercase tracking-[0.14em] text-gray-400c mb-2.5"
    >
      Fases del programa municipal
    </p>
    <div
      class="flex flex-col gap-4"
    >
      <aside
        class="pt-4 border-[0.5px] border-gray-200c"
      >
        <p
          class="font-sans text-[11px] font-medium uppercase tracking-[0.14em] text-gray-400c mb-2.5"
        >
          F1 · Alineación institucional y jurídica
        </p>
        <div
          class="font-sans text-[14px] leading-[1.55] max-w-[620px] text-amber-900"
        >
          <p>
            0–6
             · 
            Reforma reglamentaria aprobada
          </p>
        </div>
      </aside>
      <div
        class="flex items-start gap-3 border-t border-[#E8E4DC] pt-4"
      >
        <span
          class="font-mono text-[11px] px-2 py-0.5 rounded-full shrink-0 bg-[#E2DED6] text-[#6B6760]"
        >
          F
          2
        </span>
        <div>
          <p
            class="text-[12px] font-medium text-[#1C1B18]"
          >
            Negociación y pacto con concesionario
          </p>
          <p
            class="text-[11px] text-[#6B6760]"
          >
            4–9
             · 
            Concertación con operador
          </p>
        </div>
      </div>
      <div
        class="flex items-start gap-3 border-t border-[#E8E4DC] pt-4"
      >
        <span
          class="font-mono text-[11px] px-2 py-0.5 rounded-full shrink-0 bg-[#E2DED6] text-[#6B6760]"
        >
          F
          3
        </span>
        <div>
          <p
            class="text-[12px] font-medium text-[#1C1B18]"
          >
            Despliegue de infraestructura
          </p>
          <p
            class="text-[11px] text-[#6B6760]"
          >
            9–18
             · 
            Construcción CAs
          </p>
        </div>
      </div>
      <div
        class="flex items-start gap-3 border-t border-[#E8E4DC] pt-4"
      >
        <span
          class="font-mono text-[11px] px-2 py-0.5 rounded-full shrink-0 bg-[#E2DED6] text-[#6B6760]"
        >
          F
          4
        </span>
        <div>
          <p
            class="text-[12px] font-medium text-[#1C1B18]"
          >
            Arranque y operación del piloto
          </p>
          <p
            class="text-[11px] text-[#6B6760]"
          >
            18–24
             · 
            Validación KPIs
          </p>
        </div>
      </div>
      <div
        class="flex items-start gap-3 border-t border-[#E8E4DC] pt-4"
      >
        <span
          class="font-mono text-[11px] px-2 py-0.5 rounded-full shrink-0 bg-[#E2DED6] text-[#6B6760]"
        >
          F
          5
        </span>
        <div>
          <p
            class="text-[12px] font-medium text-[#1C1B18]"
          >
            Evaluación y escalamiento
          </p>
          <p
            class="text-[11px] text-[#6B6760]"
          >
            24–36
             · 
            Cobertura ZM completa
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MarcoLegal · P2-5 objetivos institucionales > vista funcionario — snapshot 1`] = `
<div>
  <p
    aria-live="polite"
    class="text-[11px] leading-snug text-[#5A6347] mb-3 max-w-2xl"
  >
    Ámbito modelado: San Pedro Garza García (único municipio en programa).
  </p>
  <div
    class="mb-6 space-y-4"
  >
    <aside
      class="pt-4 border-[0.5px] border-gray-200c"
    >
      <p
        class="font-sans text-[11px] font-medium uppercase tracking-[0.14em] text-gray-400c mb-2.5"
      >
        En regularización jurídica
      </p>
      <div
        class="font-sans text-[14px] leading-[1.55] max-w-[620px] text-amber-900"
      >
        <p>
          Acciones requeridas por fase antes de habilitar sanciones y documentos oficiales.
        </p>
      </div>
    </aside>
    <p
      class="font-sans text-[11px] font-medium uppercase tracking-[0.14em] text-gray-400c mb-2.5"
    >
      Acciones requeridas por fase
    </p>
    <ul
      class="space-y-0 mb-4"
    >
      <li
        class="border-t border-[#E8E4DC] py-3"
      >
        <p
          class="text-[12px] text-[#1C1B18]"
        >
          <span
            class="font-mono text-[#6B6760]"
          >
            F
            1
          </span>
           · 
          Alineación institucional y jurídica
        </p>
        <p
          class="text-[11px] text-[#6B6760]"
        >
          0–6
           · 
          Reforma reglamentaria aprobada
        </p>
      </li>
      <li
        class="border-t border-[#E8E4DC] py-3"
      >
        <p
          class="text-[12px] text-[#1C1B18]"
        >
          <span
            class="font-mono text-[#6B6760]"
          >
            F
            2
          </span>
           · 
          Negociación y pacto con concesionario
        </p>
        <p
          class="text-[11px] text-[#6B6760]"
        >
          4–9
           · 
          Concertación con operador
        </p>
      </li>
      <li
        class="border-t border-[#E8E4DC] py-3"
      >
        <p
          class="text-[12px] text-[#1C1B18]"
        >
          <span
            class="font-mono text-[#6B6760]"
          >
            F
            3
          </span>
           · 
          Despliegue de infraestructura
        </p>
        <p
          class="text-[11px] text-[#6B6760]"
        >
          9–18
           · 
          Construcción CAs
        </p>
      </li>
      <li
        class="border-t border-[#E8E4DC] py-3"
      >
        <p
          class="text-[12px] text-[#1C1B18]"
        >
          <span
            class="font-mono text-[#6B6760]"
          >
            F
            4
          </span>
           · 
          Arranque y operación del piloto
        </p>
        <p
          class="text-[11px] text-[#6B6760]"
        >
          18–24
           · 
          Validación KPIs
        </p>
      </li>
      <li
        class="border-t border-[#E8E4DC] py-3"
      >
        <p
          class="text-[12px] text-[#1C1B18]"
        >
          <span
            class="font-mono text-[#6B6760]"
          >
            F
            5
          </span>
           · 
          Evaluación y escalamiento
        </p>
        <p
          class="text-[11px] text-[#6B6760]"
        >
          24–36
           · 
          Cobertura ZM completa
        </p>
      </li>
    </ul>
    <button
      class="inline-flex items-center gap-1.5 rounded-[8px] bg-[#3B6D11] px-3 py-2 text-[12px] font-medium text-white hover:bg-[#2D5409] transition-colors"
      type="button"
    >
      Ver adendos jurídicos
      <svg
        class="w-3.5 h-3.5"
        fill="none"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
      >
        <path
          d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </button>
  </div>
</div>
`;
